--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  
+  "type": "module",
   "name": "hpprojekt",
   "version": "1.0.0",
   "description": "Simon Dreckmann / sdreck2s",
   "main": "node script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,10 @@
   },
   "homepage": "https://github.com/simdrerepo/hpprojekt#readme",
   "dependencies": {
+    "d3": "^7.8.0",
     "esm": "^3.2.25"
+  },
+  "devDependencies": {
+    "@types/d3": "^7.4.0"
   }
 }
